tests/algorithms/x/PHP/graphs/bidirectional_a_star.error
run: exit status 255

Fatal error: Uncaught TypeError: Cannot access offset of type array on array in /workspace/mochi/tests/algorithms/x/PHP/graphs/bidirectional_a_star.php:194
Stack trace:
#0 /workspace/mochi/tests/algorithms/x/PHP/graphs/bidirectional_a_star.php(293): astar(Array, Array)
#1 {main}
  thrown in /workspace/mochi/tests/algorithms/x/PHP/graphs/bidirectional_a_star.php on line 194
